--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "apscheduler>=3.11.0",
     "backoff>=2.2.1",
+    "firebase-admin>=7.1.0",
     "httpx[http2]>=0.28.1",
     "langfuse>=3.5.1",
     "matplotlib>=3.10.6",
