--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
     plan: starter
     runtime: python
     region: oregon
-    buildCommand: uv sync && solc-select install 0.8.27
+    buildCommand: uv sync && solc-select install 0.8.27 && solc-select install 0.8.30 && solc-select install 0.8.28 && solc-select install 0.8.20
     startCommand: python ./src/run_evals.py
     autoDeploy: true
     envVars:
